--- a/detail2.html
+++ b/detail2.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="project-details-items">
                 <div class="project-thumb">
-                    <img src="images/detail2_1.png" alt="Thumb">
+                    <img src="images/detail2_1.jpg" alt="Thumb">
                 </div>
                 <div class="top-info">
                     <div class="row">
