--- a/index.html
+++ b/index.html
@@ -412,8 +412,8 @@
                             <div class="icon">
                                 <i class="flaticon-data-analysis"></i>
                             </div>
-                             <h4><a href="project-details.html">喝金樽英雄酒对人体有什么的好处？</a></h4>
-                            <div class="pages-box">
+                             <h4 class="index-pages-title" ><a href="project-details.html">喝金樽英雄酒对人体有什么的好处？</a></h4>
+                            <div class="pages-box index-pages-box" >
                                 <div>1. 不上头—— 金樽英雄酱香型白酒蒸馏时接酒温度高达40度以上，高温下有效地挥发了有害（杂醇类）于人体健康的物质。</div>
 
                                 <div>2. 不口渴——53度的时候，是水分子和酒分子结合最好的时候，经过肝脏不需要额外的水去分解，所以饮酒后不会大量饮水。</div>
@@ -432,8 +432,8 @@
                             <div class="icon">
                                 <i class="flaticon-data-analysis-1"></i>
                             </div>
-                            <h4><a href="project-details.html">同一种酒，两次喝，感觉口感不一样，是不是酒的品质发生了变化？</a></h4>
-                            <div class="pages-box">
+                            <h4 class="index-pages-title"><a href="project-details.html">同一种酒，两次喝，感觉口感不一样，是不是酒的品质发生了变化？</a></h4>
+                            <div class="pages-box index-pages-box">
                                 <div>其实是俩种原因导致：</div>
                                 <div>1.不同的环境，不同的心情，会影响品酒的感受。所谓“酒入愁肠愁更愁”，一个人在情绪低落的时候，酶的分泌活跃程度难免下降，而“酒逢知己千杯少”，就是好朋友之间说话开心，从体内排出乙醛也多，而且喝的时间长，乙醛有更充足的时间被转化。不同的身体状态，以及不同的时间段，喝酒的味道会感觉不一样。</div>
                                     
@@ -449,8 +449,8 @@
                             <div class="icon">
                                 <i class="flaticon-startup-3"></i>
                             </div>
-                            <h4><a href="project-details.html">茅台镇有什么酿酒的秘密，能够酿造出地道的酱香型白酒？</a></h4>
-                            <div class="pages-box">
+                            <h4 class="index-pages-title"><a href="project-details.html">茅台镇有什么酿酒的秘密，能够酿造出地道的酱香型白酒？</a></h4>
+                            <div class="pages-box index-pages-box">
                                 <div>酿造正宗酱香酒有四个必不可少的条件:</div>
                                 <div>1、贵州茅台镇空气中特有的微生物群体（茅台镇独特的环境，三面环山，一面环水，四季无风，适合微生物菌群的生长繁殖）；</div>
                                 <div>2、赤水河的水，河流沿岸没有工业污染，是长江上游至今保护最好的一条支流；</div>
