--- a/project-details.html
+++ b/project-details.html
@@ -64,7 +64,7 @@
                 <!-- Single Item -->
                 <div class="team-style-one-item">
                     <div class="thumb">
-                        <img src="images/detail1_1.jpg" alt="Image not found" style="width: 288px;height: 288px;object-fit: cover;">                        
+                        <img src="images/detail1_1.jpg" alt="Image not found" style="width: 288px;height: 288px;object-fit: cover;" class="projectImg">                        
                     </div>
                     <div class="info">
                         <h4><a href="detail1.html">新老酒的差别</a></h4>
@@ -80,7 +80,7 @@
                 <!-- Single Item -->
                 <div class="team-style-one-item">
                     <div class="thumb">
-                        <img src="images/detail2_1.png" alt="Image not found" style="width: 288px;height: 288px;object-fit: cover;">                        
+                        <img src="images/detail2_1.jpg" alt="Image" style="width: 288px;height: 288px;object-fit: cover;" class="projectImg">                        
                     </div>
                     <div class="info">
                         <h4><a href="detail2.html">酿酒的秘密</a></h4>
@@ -96,7 +96,7 @@
                 <!-- Single Item -->
                 <div class="team-style-one-item">
                     <div class="thumb">
-                        <img src="images/detail1_1.jpg" alt="Image not found" style="width: 288px;height: 288px;object-fit: cover;">                        
+                        <img src="images/detail1_1.jpg" alt="Image not found" style="width: 288px;height: 288px;object-fit: cover;" class="projectImg">                        
                     </div>
                     <div class="info">
                         <h4><a href="detail3.html">对人体的好处</a></h4>
